# Kakuro-puzzle

./: CMakeLists.txt  EvolutionaryAlgorithm.cpp  EvolutionaryAlgorithm.h  KakuroBoard.cpp  KakuroBoard.h  KakuroSolver.cpp  KakuroSolver.h  README.md  main.cpp
Rominas_Version/: CMakeLists.txt  main.cpp
galib/: makevars
kakurosolver/: kakurosolver.cpp  kakurosolver.h
